--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CalculatorActivity"></activity>
+        <activity android:name=".TrigActivity"></activity>
+        <activity android:name=".OperationsActivity" />
+        <activity android:name=".MiscellaneousActivity" />
+        <activity android:name=".CalculatorActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
