--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChemActivity"></activity>
-        <activity android:name=".GeoActivity" />
-        <activity android:name=".PhysicsActivity" />
-        <activity android:name=".TrigActivity" />
-        <activity android:name=".OperationsActivity" />
-        <activity android:name=".MiscellaneousActivity" />
+        <activity android:name=".ChemActivity" android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".GeoActivity" android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".PhysicsActivity" android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".TrigActivity" android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".OperationsActivity" android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".MiscellaneousActivity" android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".CalculatorActivity" />
         <activity
             android:name=".MainActivity"
