Tinkering with favorites page, a little progress.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChemActivity" android:theme="@style/ChemTheme"></activity>
-        <activity android:name=".GeoActivity" android:theme="@style/GeoTheme" />
-        <activity android:name=".PhysicsActivity" android:theme="@style/PhysTheme" />
-        <activity android:name=".TrigActivity" android:theme="@style/TrigTheme" />
-        <activity android:name=".OperationsActivity" android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MiscellaneousActivity" android:theme="@style/MiscTheme" />
-        <activity android:name=".CalculatorActivity"/>
+        <activity android:name=".FavoritesActivity"></activity>
+        <activity
+            android:name=".ChemActivity"
+            android:theme="@style/ChemTheme" />
+        <activity
+            android:name=".GeoActivity"
+            android:theme="@style/GeoTheme" />
+        <activity
+            android:name=".PhysicsActivity"
+            android:theme="@style/PhysTheme" />
+        <activity
+            android:name=".TrigActivity"
+            android:theme="@style/TrigTheme" />
+        <activity
+            android:name=".OperationsActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MiscellaneousActivity"
+            android:theme="@style/MiscTheme" />
+        <activity android:name=".CalculatorActivity" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
